# RayEngine

./: CMakeLists.txt
include/: EntryPoint.h
include/core/: Application.h  AssetsManager.h  Core.h  Object.h  Scene.h  TimerManager.h
include/ui/: HUD.h
src/core/: Application.cpp  AssetsManager.cpp  Object.cpp  Scene.cpp  TimerManager.cpp
src/ui/: HUD.cpp
